[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/cloudy-bg.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Calibri.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="cloudy-bg" type="Sprite" parent="."]
position = Vector2( -1.33298, -1.46729 )
scale = Vector2( 1.51001, 1.51001 )
texture = ExtResource( 2 )
centered = false

[node name="Player0Label" type="Label" parent="."]
margin_left = -1.0
margin_right = 419.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Your Time:"

[node name="Player1Label" type="Label" parent="."]
margin_left = 872.0
margin_right = 1264.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "...'s Time:"
align = 2

[node name="Player2Label" type="Label" parent="."]
margin_left = -1.0
margin_top = 658.18
margin_right = 419.0
margin_bottom = 709.18
custom_fonts/font = SubResource( 1 )
text = "...'s Time:"

[node name="Player3Label" type="Label" parent="."]
margin_left = 872.0
margin_top = 663.838
margin_right = 1264.0
margin_bottom = 714.838
custom_fonts/font = SubResource( 1 )
text = "...'s Time:"
align = 2

[node name="MainLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = 328.091
margin_right = 1280.0
margin_bottom = 428.091
custom_fonts/font = SubResource( 2 )
text = "Time Left: ...s"
align = 1

[node name="NotifHTTPRequest" type="HTTPRequest" parent="."]

[node name="CountdownTimer" type="Timer" parent="."]
[connection signal="request_completed" from="NotifHTTPRequest" to="." method="_on_NotifHTTPRequest_request_completed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
